--- a/01.UI/Aghsat.UI/Areas/Admin/Views/CategoryManagment/_CreateCategory.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/CategoryManagment/_CreateCategory.cshtml
@@ -9,7 +9,7 @@
     HttpMethod = "Post",
     UpdateTargetId = "List",
     InsertionMode = InsertionMode.Replace,
-    OnSuccess = "Hide"
+    OnSuccess = "OnSuccess"
 }))
 {
     @Html.AntiForgeryToken()
