--- a/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/Delete.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/Delete.cshtml
@@ -9,7 +9,7 @@
     {
         HttpMethod = "Post",
         UpdateTargetId = "List",
-        OnSuccess = "Hide"
+        OnSuccess = "OnSuccess"
     }))
     {
         @Html.AntiForgeryToken()
