--- a/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/Index.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/Index.cshtml
@@ -13,11 +13,10 @@
     @Html.Partial("_SubjectForm")
 
     <div id="List">
-        @ToastrHelper.ProcessToastrs()
         @Html.Action("ShowList")
     </div>
 
 </div>
 
 
-@Html.Partial("_Modal")
+@*@Html.Partial("_Modal")*@
