--- a/01.UI/Aghsat.UI/Areas/Admin/Views/Shared/_SubjectForm.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/Shared/_SubjectForm.cshtml
@@ -1,4 +1,5 @@
-﻿
-<div class="  uk-alert  bg-light text-right p-3 uk-lightbox-page   border border-dark" >
-     <h4><span class="@ViewBag.Icon">  </span> @ViewBag.Title</h4>
+﻿<div class=" bg-secondary">
+    <div class="  uk-alert  bg-light text-right p-3 uk-lightbox-page   border border-dark">
+        <h4><span class="@ViewBag.Icon">  </span> @ViewBag.Title</h4>
+    </div>
 </div>
