--- a/01.UI/Aghsat.UI/Views/Shared/_Layout.cshtml
+++ b/01.UI/Aghsat.UI/Views/Shared/_Layout.cshtml
@@ -124,7 +124,7 @@
 
         @{Html.RenderPartial("_BreadCrumb");}
 
-        @Html.Action(MVC.Home.Slideshow())
+     @*   @Html.Action(MVC.Home.Slideshow())*@
 
 
         @RenderBody()
