--- a/01.UI/Aghsat.UI/Views/Shared/_Slideshow.cshtml
+++ b/01.UI/Aghsat.UI/Views/Shared/_Slideshow.cshtml
@@ -8,7 +8,7 @@
                 @foreach (var item in Model)
                 {
                     <li>
-                        <img class="img-fluid" src="../../Content/Image/@item.ImageName" alt="" uk-cover>
+                        <img class="img-fluid" src="../../Content/Image/@item.PictureListVms.PictureName" alt="@item.PictureListVms.ShortDescription" uk-cover>
                     </li>
                 }
             </ul>
