--- a/01.UI/Aghsat.UI/Areas/Admin/Views/Shared/_Modal.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/Shared/_Modal.cshtml
@@ -1,11 +1,19 @@
 ﻿
 <div id="modal-sections" class="uk-modal-container" uk-modal>
-    <div class="uk-modal-dialog uk-margin-auto-vertical " >
-        <div class="uk-modal-header m-3 ">
-            <button class="uk-modal-close-default" type="button" uk-close></button>
+    <div class="uk-modal-dialog uk-margin-auto-vertical ">
+        @*<button class="uk-modal-close-default" type="button" uk-close></button>*@
+
+        <div class="uk-modal-header  uk-background-primary  ">
+            <div>
+                
+                <button class=" uk-modal-close-default " type="button" uk-close></button>
+
+            </div>
         </div>
-        <div class="uk-modal-body" id="Modal_Body" uk-overflow-auto>
-        </div>
+        <div class="uk-modal-body " id="Modal_Body" uk-overflow-auto>
+
+
+        </div>      
     </div>
 </div>
 
