--- a/01.UI/Aghsat.UI/Assets/persian_fonts_override.css
+++ b/01.UI/Aghsat.UI/Assets/persian_fonts_override.css
@@ -93,7 +93,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 body {
-    font-family: Vazir !important;
+    font-family: /*Vazir*/ Sahel !important;
     text-align: justify;
 }
 
